<resources>
    <string name="app_name">CovidAssessment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="covid_home_banner">Welcome to the Covid Screening App</string>
    <string name="button_1">Self Screening Tool</string>
    <string name="button_2">Book a Vaccine Appointment</string>
    <string name="button_3">Book a COVID Test</string>
    <string name="button_4">Get COVID Updates</string>
    <string name="covid_assessment_head">Screening Questions</string>
    <string name="covid_assessment_ques1">1. Are you currently experiencing any of these issues?</string>
    <string name="covid_assessment_ques2">2. Have you travelled outside country in the last 14 days?</string>
    <string name="covid_assessment_ques3">3. Have you had close contact with a confirmed or probable COVID-19?</string>

    <string name="covid_assessment_ques1_op1">Fever or Chills</string>
    <string name="covid_assessment_ques1_op2">Difficulty Breathing or Shortness of Breath</string>
    <string name="covid_assessment_ques1_op3">Cough</string>
    <string name="covid_assessment_ques1_op4">Sore Throat, trouble Swallowing</string>
    <string name="covid_assessment_ques1_op5">Runny Nose</string>
    <string name="covid_assessment_ques1_op6">Nausea, Vomiting, Diarrhea</string>

    <string name="covid_assessment_ques1_chkbx1">Yes</string>
    <string name="covid_assessment_ques1_chkbx2">No</string>

    <string name="covid_assessment_button">Next</string>

    <string name="vaccine_registeration">Book a COVID-19 vaccine appointment</string>

    <string name="full_name">Full Name</string>
    <string name="adress">Address</string>
    <string name="id_type">Identification Type</string>
    <string name="id_number">Identification #</string>
    <string name="eligible">Eligible Group</string>
    <string name="date">Date</string>
    <string name="centre">Centre</string>
    <string name="timeslot">Time Slot</string>

    <string name="submit">Submit</string>
    <string name="dateFormat">dd/mm/yyyy</string>
    <string name="vaccineBookCheck">Check Vaccine Booking</string>
    <string name="vaccineBookCheckTitle">Check your booking details</string>
    <string name="fetchBookingdetail">Fetch Details</string>


    <string-array name="id_type">
        <item>Driving License</item>
        <item>Passport</item>
        <item>Health Card</item>
    </string-array>

    <string-array name="eligible_group">
        <item>50 Years or older</item>
        <item>Health Workers</item>
        <item>Essential Worker</item>
    </string-array>

    <string-array name="select_centre">
        <item>HR Hospital, Toronto</item>
        <item>VS Hospital, Vancouver</item>
        <item>SD Hospital, Scarborough</item>
    </string-array>

    <string name="covidbooking1">Booking an appointment online</string>
    <string name="covidbooking2">To get tested at any COVID-19 Assessment Centre you must meet the criteria listed below and book an appointment online.</string>
    <string name="covidbooking3"> &#x2713; Showing symptoms of COVID-19</string>
    <string name="covidbooking4">&#x2713; Been exposed to a confirmed case of COVID-19 as informed by public health or through the COVID alert app</string>
    <string name="covidbooking5">&#x2713; Working or living in a setting that has a COVID-19 outbreak as identified by public health</string>
    <string name="covidbooking6">&#x2713; Been selected by the Ministry of Health for a targeted testing campaign</string>
    <string name="covidbooking7">If you do not meet any above criteria , <a href="https://news.ontario.ca/en">
        please visit a Ministry authorized pharmacy for testing.</a></string>
    <string name="covidbooking8">IF YOU ARE HAVING AN EMERGENCY OR IF YOU ARE HAVING A CHEST PAIN OR DIFFICULTY BREATHING PLEASE GO TO THE EMERGENCY DEPARTMENT IN ANY HOSPITAL.</string>
    <string name="covidbooking9">Please Select Assessment Center</string>
    <string name="coviddate">Select Date </string>
    <string name="covidtime">Select Time</string>
    <string name="coviddetails1">Add your details</string>
    <string name="coviddetails2">Name</string>
    <string name="coviddetails3">Email</string>
    <string name="covidagree">I have read the list of who is eligible to get tested and I attest that I fit in one of those groups and I consent to
        utilizing the collected information as part of my medical record</string>
    <string name="covidbook">Book</string>
    <string name="covidbookdate">Select Date</string>
    <string name="coviddata1">COVID-19 DATA</string>


    <string-array name="covidassessmentcenter">
        <item>Scarborough Health Network- General Hospital</item>
        <item>Centre for Immigrant and Community Services (CICS)</item>
        <item>University of Toronto - Scarborough Campus</item>
        <item>Warden Woods (Scarborough)</item>
        <item>Oakridge (Scarborough)</item>
        <item>Michael Garron Hospital</item>
    </string-array>
    <string-array name="covidtesttime">
        <item>8:00-9:00</item>
        <item>9:00-10:00</item>
        <item>10:00-11:00</item>
        <item>11:00-12:00</item>
        <item>12:00-13:00</item>
        <item>13:00-14:00</item>
        <item>14:00-15:00</item>
        <item>15:00-16:00</item>
        <item>16:00-17:00</item>
    </string-array>

    <!-- Covid Infor Page -->
    <string name ="covidtotal">Total Cases&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;432,805</string>
    <string name ="covidresolve">Resolved&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                    &#160;&#160;&#160;&#160;383,014</string>
    <string name ="covidd">Deaths&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                    &#160;&#160;&#160;&#160;&#160;&#160;&#160;7,829</string>
    <string name ="covidhos">Hospitalized&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;2,350</string>
    <string name ="covidi">In ICU&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;806</string>
    <string name ="covidiv">In ICU on Ventilator&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;588</string>
    <string name="covidnum">Numbers above were last updated on April 22, 2021, at 10:30 a.m</string>
    <string name="covidmoreinfo">For more information on COVID-19, <a href="https://en.wikipedia.org/wiki/Template:COVID-19_pandemic_data/Canada_medical_cases_by_province">
                Please click here</a></string>

    <!-- Covid Assessment Page -->
    <string name="covidscrres">COVID-19 Screening Result</string>
    <string name="covid1"></string>
    <string name="validdate1">Valid on</string>
    <string name="validrules1">Next Steps:</string>
    <string name="validrules2">Tell your employer about this result</string>

    <string name="covidtest1"></string>
    <string name="covidtest2">Upcoming booking for</string>

    <!-- Covid Home Page -->
    <string name="messagecovid">Stay at home except for essential travel and follow the <a href="https://covid-19.ontario.ca/zones-and-restrictions"></a>restrictions and public health measures</string>
    <string name="covidhome"></string>
    <string name="covidtext">Get the latest case data and updates, learn how to protect yourself and others</string>
    <string name="covidvaccine">COVID-19 Vaccine</string>
    <string name="covidvaccine1">Vaccine booking system is now available.</string>
    <string name="covidinfo">Think you might have COVID-19(coronavirus)?</string>
    <string name="covidinfo1">Screen for COVID-19 before you go to school,work or other work public place</string>
    <string name="covidinfo2">Book Appointment for testing</string>
    <string name="covidwarning"></string>

    <!-- Covid Test Confirm Page -->
    <string name="covidtestinfo">Information on getting tested</string>
    <string name="covidtestinfo1">You must have your Health Card to be tested. Please bring your Driver’s License too if you have one.</string>



</resources>