<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".covid_booking">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/covidbooking1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/covidbooking2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking2"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/covidbooking3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking3"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/covidbooking4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking4"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/covidbooking5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking5"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/covidbooking6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking6"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/covidbooking7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking7"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/covidbooking8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking8"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/covidbooking9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidbooking9"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/bookingcenter"
                android:layout_width="382dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/covidassessmentcenter"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/coviddate"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Date"
                android:focusable="false"
                android:hint="@string/covidbookdate"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/covidtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidtime"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/bookingtime"
                android:layout_width="382dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/covidtesttime"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/coviddetails1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/coviddetails1"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/covidname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Name"
                android:ems="10"
                android:hint="@string/coviddetails2"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/covidemail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Email"
                android:ems="10"
                android:hint="@string/coviddetails3"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress|textPersonName"
                tools:ignore="LabelFor" />

            <CheckBox
                android:id="@+id/checkBoxTestBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/covidagree"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/covidbook"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:onClick="covidbookClick"
                android:text="@string/covidbook" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>